<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EnterOTPFragment">

    <com.chaos.view.PinView
        android:id="@+id/pin_view"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#65EAEAEA"
        app:cursorColor="@color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="4"
        app:itemHeight="50dp"
        app:itemRadius="5dp"
        app:itemWidth="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_sent"
        app:lineColor="?colorAccent"
        app:lineWidth="1dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_round_arrow_back_24"
        app:navigationIconTint="?colorOnPrimary"
        app:title="@string/app_name"
        app:titleTextColor="?colorOnPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="@+id/pin_view"
        app:layout_constraintStart_toStartOf="@+id/pin_view"
        app:layout_constraintTop_toBottomOf="@id/pin_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gray"
        android:elevation="0dp"
        android:enabled="false"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="@+id/pin_view"
        app:layout_constraintStart_toStartOf="@+id/pin_view"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:text="@string/enter_otp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_otp_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/otp_sent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>